cod refinement before code review